# target-mssql

./: .gitignore  .pre-commit-config.yaml  AZURE_BLOB_STAGE.md  CLAUDE.md  PERFORMANCE.md  README.md  benchmark_config.json  docker-compose.yaml  meltano.yml  pyproject.toml  tox.ini  tox.toml
.github/: dependabot.yml
.github/workflows/: ci.yaml  release.yaml
target_mssql/: azure_blob.py  connector.py  sinks.py  target.py
target_mssql/tests/: conftest.py  generate_benchmark_data.py  test_core.py
target_mssql/tests/samples/aapl/: __init__.py  __main__.py  aapl.py
target_mssql/tests/samples/sample_tap_countries/: countries_tap.py
