[project]
name = "target-mssql"
version = "0.3.0"
description = "`target-mssql` is a Singer target for mssql, built with the Meltano SDK for Singer Targets."
authors = [{ name = "Henning Holgersen" }]
requires-python = ">=3.10,<4"
license = "Apache-2.0"
keywords = ["ELT", "mssql", "Meltano", "SQL Server"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "pymssql~=2.3.11",
    "singer-sdk[sql]~=0.53.7",
    "sqlalchemy~=2.0",
    "typing-extensions>=4.15.0 ; python_full_version < '3.12'",
]

[project.optional-dependencies]
pyodbc = ["pyodbc>=5,<6"]

[project.scripts]
target-mssql = "target_mssql.target:Targetmssql.cli"

[dependency-groups]
dev = [{ include-group = "lint" }, "mypy>=1", "tox>=4"]
lint = ["ruff>=0.15"]
test = ["pytest>=8"]

[tool.uv]
default-groups = "all"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 120
src = ["target_mssql"]

[tool.ruff.lint]
select = [
    "E",
    "W",
    "F",
    "I",
    "C90",
    "S",
    "UP",
    "SIM",
    "C4",
    "FURB",
    "PERF",
    "FLY",
    "B",
    "TRY",
    "EM",
]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.isort]
known-first-party = ["target_mssql"]
