[project]
name = "target-mssql"
dynamic = ["version"]
description = "Singer target for mssql, built with the Meltano SDK for Singer Targets."
authors = [{ name = "Henning Holgersen" }]
maintainers = [{ name = "Meltano", email = "hello@meltano.com" }]
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
keywords = ["ELT", "mssql", "Meltano", "SQL Server"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "pymssql~=2.3.13",
    "singer-sdk[sql]~=0.54.2",
    "sqlalchemy~=2.0",
    "typing-extensions>=4.15.0 ; python_full_version < '3.12'",
]

[project.optional-dependencies]
pyodbc = ["pyodbc>=5.3.0,<6"]

[project.scripts]
target-mssql = "target_mssql.target:Targetmssql.cli"

[dependency-groups]
dev = [{ include-group = "lint" }, "mypy>=2.1.0"]
lint = ["ruff>=0.15.13"]
test = ["pytest>=9.0.3"]

[tool.uv]
default-groups = "all"

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
fallback-version = "0.0.0.dev0"
source = "vcs"

[tool.pytest]
addopts = ["-ra"]
filterwarnings = [
    "error",
    "once:Python .* will reach its end of life:singer_sdk.helpers._compat.SingerSDKPythonEOLWarning",
]
log_level = "INFO"
minversion = "9"
strict = true
testpaths = ["target_mssql/tests"]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
    "E",
    "W",
    "F",
    "I",
    "C90",
    "S",
    "UP",
    "SIM",
    "C4",
    "FURB",
    "PERF",
    "FLY",
    "B",
    "TRY",
    "EM",
    "TC",
]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.isort]
known-first-party = ["target_mssql"]
